--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,96 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Información Personal
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="mainContainer">
+    <div class="containerHeader">
+      <img style="margin:10px" src="assets/images/user.png" />
+      <div>
+        <div class="containerItems">
+          <h1 class="styleTitle">
+            Nombre:
+          </h1>
+          <h1 class="styleResponse">
+            Darwin David
+          </h1>
+        </div>
+        <div class="containerItems">
+          <h1 class="styleTitle">
+            Apellidos:
+          </h1>
+          <h1 class="styleResponse">
+            Cacuango Criollo
+          </h1>
+        </div>
+        <div class="containerItems">
+          <h1 class="styleTitle">
+            Dirección </h1>
+          <h1 class="styleResponse">
+            AV, 6 DICIEMBRE Y CUCARDAS
+          </h1>
+        </div>
+      </div>
+    </div>
+    <div class="lineSeparetor">
+    </div>
+    <div class="containerItems">
+      <h1 class="styleTitle">
+        Espectativas:
+      </h1>
+      <h1 class="styleResponse">
+        Explorar mis talentos para desarrollarme a largo plazo en el
+        campo laboral para el cual tenga mayor potencial y
+        consolidarme como un trabajador óptimo
+      </h1>
+    </div>
+    <div class="containerItems1">
+      <h1 class="styleTitle">
+        Hobies:   
+      </h1>
+      <div style="flex-direction: column; margin:0 0 0 40px">
+       
+        <h1 class="styleResponse">
+          - Jugar VolerBol
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+        </h1>
+        <h1 class="styleResponse">
+          - Aprender nuevas cosas
+
+        </h1>
+        <h1 class="styleResponse">
+
+          - jugar futbol
+
+        </h1>
+        <h1 class="styleResponse">
+
+          - Leer libros
+
+        </h1>
+        <h1 class="styleResponse">
+
+          - Escuchar musica
+        </h1>
+      </div>
+
+    </div>
+  </div>
 </ion-content>
+
+<h1 class="styleTitle">
+  Apellidos:
+</h1>
+<h1 class="styleResponse">
+  Cacuango Criollo
+</h1>
+<h1 class="styleTitle">
+  Dirección :
+</h1>
+<h1 class="styleResponse">
+  AV, 6 DICIEMBRE Y CUCARDAS
+</h1>
