--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,77 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Estudios realizados
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="mainContainer">
+    <div class="containerHeader">
+      <img style="margin:10px;width: 150px;height: 150px; border-radius: 10px;" src="assets/images/poli.png" />
+      <div>
+        <div class="containerItems">
+          <h1 class="styleResponse">
+            Escuela Politécnica Nacionál
+          </h1>
+        </div>
+        <div class="containerItems">
+          <h1 class="styleResponse">
+            Tecg. Desarrollo de software
+          </h1>
+        </div>
+        <div class="containerItems">
+          
+          <h1 class="styleResponse">
+            5 semestre 
+          </h1>
+        </div>
+      </div>
+    </div>
+    <div class="containerHeader1">
+      <img style="margin:10px;width: 150px;height: 150px; border-radius: 10px;" src="assets/images/vmg.jpg" />
+      <div>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+        <div class="containerItems">
+          <h1 class="styleResponse">
+            Colegio Técnico Victor Manuel Guzmán
+          </h1>
+        </div>
+        <div class="containerItems">
+          <h1 class="styleResponse">
+            Técnico en Informática
+          </h1>
+        </div>
+        <div class="containerItems">
+          
+          <h1 class="styleResponse">
+            3 Años
+          </h1>
+        </div>
+      </div>
+    </div>
+    <div class="containerHeader">
+      <img style="margin:10px;width: 150px;height: 150px; border-radius: 10px;" src="assets/images/cec.jpg" />
+      <div>
+        <div class="containerItems">
+          <h1 class="styleResponse">
+            Instituto de Idiomas CEC-EPN
+          </h1>
+        </div>
+        <div class="containerItems">
+          <h1 class="styleResponse">
+            Avanzado 2
+          </h1>
+        </div>
+        <div class="containerItems">
+          
+          <h1 class="styleResponse">
+            6 Niveles 
+          </h1>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </ion-content>
