--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,102 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Referencias Laborales
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="containerHeader">
+    <div style="width: 100%">
+      <div style="display:flex;flex-direction: row;">
+        <div style="width: 300px;">
+          <div class="containerItems">
+            <h1 class="styleTitle">
+              Nombres:
+            </h1>
+            <h1 class="styleResponse">
+              Darwin David
+            </h1>
+          </div>
+          <div class="containerItems">
+            <h1 class="styleTitle">
+              Apellidos:
+            </h1>
+            <h1 class="styleResponse">
+              Cacuango Criollo
+            </h1>
+          </div>
+          <div class="containerItems">
+            <h1 class="styleTitle">
+              Teléfono </h1>
+            <h1 class="styleResponse">
+              0994697466
+            </h1>
+          </div>
+        </div>
+        
+        <ion-button>Contactar</ion-button>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+      </div>
+      <div style="display:flex;flex-direction: row;background-color: rgb(44, 2, 2);">
+        <div style="width: 300px;">
+          <div class="containerItems">
+            <h1 class="styleTitle">
+              Nombres:
+            </h1>
+            <h1 class="styleResponse">
+              Freddy Roberto
+            </h1>
+          </div>
+          <div class="containerItems">
+            <h1 class="styleTitle">
+              Apellidos:
+            </h1>
+            <h1 class="styleResponse">
+              Cacuango Criollo
+            </h1>
+          </div>
+          <div class="containerItems">
+            <h1 class="styleTitle">
+              Teléfono </h1>
+            <h1 class="styleResponse">
+              0914714524
+            </h1>
+          </div>      
+        </div>
+            
+        <ion-button>Contactar</ion-button>
+      </div>
+      <div style="display:flex;flex-direction: row;">
+        <div style="width: 300px;">
+          <div class="containerItems">
+            <h1 class="styleTitle">
+              Nombres:
+            </h1>
+            <h1 class="styleResponse">
+              Pepito Juarez
+            </h1>
+          </div>
+          <div class="containerItems">
+            <h1 class="styleTitle">
+              Apellidos:
+            </h1>
+            <h1 class="styleResponse">
+              Castro Moreira
+            </h1>
+          </div>
+          <div class="containerItems">
+            <h1 class="styleTitle">
+              Teléfono </h1>
+            <h1 class="styleResponse">
+              01412547848
+            </h1>
+          </div>
+        </div>
+      
+        <ion-button>Contactar</ion-button>
+      </div>
+    </div>
+  </div>
 </ion-content>
